Testing fix to height(100vh) error on mobile

--- a/frontend/src/global_styles/main.scss
+++ b/frontend/src/global_styles/main.scss
@@ -8,8 +8,7 @@ body {
 
 .app {
   background-color: #f7f9f9 !important;
-  position: 'fixed';
-  bottom: offset;
+  height: 100%;
 }
 
 * {
