--- a/frontend/src/pages/home/home.scss
+++ b/frontend/src/pages/home/home.scss
@@ -7,8 +7,6 @@
     flex: 11;
 
     .dashboard-content {
-      height: calc(100vh - 81.5px);
-
       .home-content {
         max-height: 100%;
         overflow-y: scroll;
